      - Added 'autocomplete' option for specifying which completion
        groups should be auto-completed. [b2]
      - Added 'banghist' option. [b1]
      - Added 'cookies', 'cookieaccept', and 'cookielifetime' options. [b3]
      - Added 'downloadsort' option. [b7]
      - Replaced 'focuscontent' with 'strictfocus'. [b1]
      - Made 'strictfocus' a [sitemap]. [b7]
      - 'complete' now defaults to "slf" but file completion only
        triggers when the URL begins as above. [b1]
      - Added 'jumptags' option. [b7]
      - Added 's' flag to 'pageinfo' and changed default value. [b7]
      - Added 'passkeys' option. [b3]
      - Added 'passunknown' option. [b7]
      - Changed 'urlseparator' default value to "|". [b3]
      - Added "passwords" and "venkman" dialogs to :dialog. [b2]
      - Make 'showmode' a [stringlist] option. [b7]
      - Added 'wildanchor' option. [b2]
    • Added BookmarkChange, BookmarkRemove autocommands. [b2]
    • Removed the :source line at the end of files generated by
      :mkpentadactylrc. [b2]
    • gf now toggles between source and content view.
      The | key binding has been removed. [b1]
    • Page zoom information is now shown in the status bar, and
      change in zoom status no longer appears in :messages. [b1]
    • Added n_ZO, n_ZI, n_ZM, and n_ZR as aliases for n_zO, n_zI,
      n_zM, and n_zR. [b1]
    • Completion list now behaves better when the multi-line output
      window is displayed. [b1]
    • Major help system improvements:
      - Plugins may now provide full-fledged :help documentation. [b1]
      - Add basic plugin authorship documentation. [b1]
      - The help system is newly modularized and features significant
        updates, rewrites, and formatting improvements. [b1]
      - Added <A-F1> to open the single, consolidated help page. [b5]
    • Removed :beep. [b2]
    • Removed :edit, :tabedit, and :winedit aliases. [b2]
    • Removed :play. [b2]

# vim:set ft=conf sts=2 sw=2 et fo=tcn2 tw=68: