@@ -57,6 +57,9 @@ var Option = Class("Option", {
         if (Set.has(this.modules.config.defaults, this.name))
             defaultValue = this.modules.config.defaults[this.name];
 
+        if (defaultValue == null && this.getter)
+            defaultValue = this.getter();
+
         if (defaultValue !== undefined) {
             if (this.type === "string")
                 defaultValue = Commands.quote(defaultValue);
